--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0"
   },
