--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.3.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "twilio": "^5.0.4"
+    "twilio": "^5.0.4",
+    "validator": "^13.12.0"
   }
 }
